Fix Bug 531179 - Add compiler arg support to iajc task